Fix overflow

--- a/assets/sass/partials/_typography.sass
+++ b/assets/sass/partials/_typography.sass
@@ -10,6 +10,7 @@ h1
 	font-weight: 400
 	text-transform: uppercase
 	letter-spacing: 2px
+	-webkit-hyphens: manual
 
 	i
 		font-size: 90%
@@ -18,6 +19,7 @@ h1
 
 h2
 	font-weight: 400
+	-webkit-hyphens: manual
 
 h3
 	font-size: 28px
